--- a/TODO
+++ b/TODO
@@ -1,5 +1,12 @@
+Design the car
+Build the car
+Drive the car
+
 Make gyrometer have a save file that can be used for saving calibrations
 Make a self test for the gyrometer
 Make a calibration process for the gyrometer
-Increase code speed for I2C interactions?
 Make a program to measure distance with the ultrasonic ranger
+
+NOTES:
+command to watch controller input:
+    cat /dev/input/js0 | xxd -c 8
