--- a/TODO
+++ b/TODO
@@ -1,3 +1,8 @@
+Make a universal program to connect any components with any components.
+
+Convert the build system to cmake
+Use precompiled headers to speed things up.
+
 Design the car
 Build the car
 Drive the car
